# cookiecutter-fastapi-docker

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/docker/compose/: docker-compose.prod.yml  docker-compose.stage.yml
{{cookiecutter.project_slug}}/docker/dockerfile/app/: Dockerfile
{{cookiecutter.project_slug}}/src/: .env  logging_config.py  main.py  worker.py
{{cookiecutter.project_slug}}/src/routes/: main.py
{{cookiecutter.project_slug}}/src/routes/http/: welcome.py
{{cookiecutter.project_slug}}/src/routes/ws/: manager.py
{{cookiecutter.project_slug}}/src/settings/: __init__.py  base.py  development.py  production.py
{{cookiecutter.project_slug}}/src/utils/common/: convert_to_object.py
{{cookiecutter.project_slug}}/src/utils/decorators/: exceptions.py  shared_task.py
{{cookiecutter.project_slug}}/src/utils/redis/: redis_connector.py
